<resources>
    <string name="app_name">nWoDCombat</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_defender">defender</string>
    <string name="fragment_attacker">attacker</string>
    <string name="rule_reroll_ten">10-again</string>
    <string name="button_ok">OK</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="title_character_create">Create new character</string>
    <string name="title_attribute">Attribute</string>
    <string name="title_attributes">Attributes</string>
    <string name="title_skills">Skills</string>
    <string name="title_traits_derived">Derived traits</string>
    <string name="title_merits">Merits</string>
    <string name="dialog_attacker_pool">Attacker\'s dice pool is %s.</string>
    <string name="dialog_attacker_pool_rerolls" formatted="false">Attacker\'s dice pool is %s, rerolling all %ss or better.</string>
    <string name="dialog_attacker_pool_no_rerolls">Attacker\'s dice pool is %s, and gets NO rerolls.</string>
    <string name="dialog_defender_pool">Defender subtracts %s dice from the attacker\'s pool.</string>
    <string name="dialog_attacker_roll">Attacker rolls:</string>
    <string name="dialog_attacker_result_failure">Attacker misses!</string>
    <string name="error_message_context_null" translatable="false">Context is null!</string>
    <string name="error_specialty_exists">A specialty with this name already exists for this skill!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="button_add">Add</string>
    <string name="button_finish">Finish</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
    <string name="button_set">Set</string>
    <string name="title_personal_info">Personal info</string>
    <string name="title_cat_attrs_set">Set attribute categories</string>
    <string name="title_cat_skills_set">Set skill categories</string>
    <string name="title_points_set">Distribute points</string>
    <string name="title_settings">Settings</string>
    <string name="title_summary">Summary</string>
    <string name="kind_attr">Attribute</string>
    <string name="kind_skill">Skill</string>
    <string name="kind_advantage">Advantage</string>
    <string name="cat_derived">Other</string>
    <string name="cat_mental">Mental</string>
    <string name="cat_physical">Physical</string>
    <string name="cat_social">Social</string>
    <string name="cat_power">Power</string>
    <string name="cat_finesse">Finesse</string>
    <string name="cat_resistance">Resistance</string>
    <string name="attr_int">Intelligence</string>
    <string name="attr_wits">Wits</string>
    <string name="attr_res">Resolve</string>
    <string name="attr_str">Strength</string>
    <string name="attr_dex">Dexterity</string>
    <string name="attr_sta">Stamina</string>
    <string name="attr_pre">Presence</string>
    <string name="attr_man">Manipulation</string>
    <string name="attr_com">Composure</string>
    <string name="cat_primary_suffix">Primary</string>
    <string name="cat_secondary_suffix">Secondary</string>
    <string name="cat_tertiary_suffix">Tertiary</string>
    <string name="cat_specialties">Specialties</string>
    <string name="skill_academics">Academics</string>
    <string name="skill_computer">Computer</string>
    <string name="skill_crafts">Crafts</string>
    <string name="skill_investigation">Investigation</string>
    <string name="skill_medicine">Medicine</string>
    <string name="skill_occult">Occult</string>
    <string name="skill_politics">Politics</string>
    <string name="skill_science">Science</string>
    <string name="skill_athletics">Athletics</string>
    <string name="skill_brawl">Brawl</string>
    <string name="skill_drive">Drive</string>
    <string name="skill_firearms">Firearms</string>
    <string name="skill_larceny">Larceny</string>
    <string name="skill_stealth">Stealth</string>
    <string name="skill_survival">Survival</string>
    <string name="skill_weaponry">Weaponry</string>
    <string name="skill_animal_ken">Animal Ken</string>
    <string name="skill_empathy">Empathy</string>
    <string name="skill_expression">Expression</string>
    <string name="skill_intimidation">Intimidation</string>
    <string name="skill_persuasion">Persuasion</string>
    <string name="skill_socialize">Socialize</string>
    <string name="skill_streetwise">Streetwise</string>
    <string name="skill_subterfuge">Subterfuge</string>
    <string name="trait_defense">Defense</string>
    <string name="trait_health">Health</string>
    <string name="trait_initiative">Initiative</string>
    <string name="trait_morality">Morality</string>
    <string name="trait_speed">Speed</string>
    <string name="trait_willpower">Willpower</string>
    <string name="summary_attr_mental" formatted="false">Intelligence %s, Wits %s, Resolve %s</string>
    <string name="summary_attr_physical" formatted="false">Strength %s, Dexterity %s, Stamina %s</string>
    <string name="summary_attr_social" formatted="false">Presence %s, Manipulation %s, Composure %s</string>
    <string name="setting_cheat">Add points freely</string>
    <string name="setting_char_creator">Character creator</string>
    <string name="setting_ignore_caps">Ignore stat caps</string>
    <string name="hint_tap_to_select">Tap to select</string>
    <string name="hint_step_personal_info_name">Name</string>
    <string name="hint_step_personal_info_player">Player</string>
    <string name="hint_type_specialty_name">Type specialty name here</string>
    <string name="default_step_personal_info_player">Storyteller</string>
    <string name="hint_step_personal_info_concept">Concept</string>
    <string name="label_step_personal_info_virtue">Virtue:</string>
    <string name="label_step_personal_info_vice">Vice:</string>
    <string name="label_step_personal_info_nature">Nature:</string>
    <string name="label_step_personal_info_demeanor">Demeanor:</string>
    <string name="spinner_nothing_selected_option_pick">Select an option</string>
    <string name="vice_name_greed">Greed</string>
    <string name="vice_name_envy">Envy</string>
    <string name="vice_name_gluttony">Gluttony</string>
    <string name="vice_name_lust">Lust</string>
    <string name="vice_name_pride">Pride</string>
    <string name="vice_name_sloth">Sloth</string>
    <string name="vice_name_wrath">Wrath</string>
    <string name="vice_description_envy">An envious person is never satisfied with what she has. No matter her wealth, status or accomplishments, there is always someone else who seems to have more, and it\'s coveted. Envious characters are never secure or content with their place in life. They always measure themselves against their rivals and look for ways to get what they deserve. They might be considered paranoid or just consumed by a self-loathing that they project onto others.</string>
    <string name="vice_description_gluttony">Gluttony is about indulging appetites to the exclusion of everything else. It\'s about dedicating oneself to sensual pleasures or chasing the next high. A glutton makes any sacrifice to feed his insatiable appetite for pleasure, regardless of the cost to himself or those around him. He might be considered a junkie or even a kleptomaniac (he steals things he doesn\'t need just for the thrill of it).</string>
    <string name="vice_description_greed">Like the envious, the greedy are never satisfied with what they have. They want more - more money, a bigger house, more status or influence - no matter that they may already have more than they can possibly handle. Everything is taken to excess. To the greedy, there is no such thing as having too much. If that means snatching someone else\'s hard-earned reward just to feather one\'s own nest, well, that\'s the way it goes.</string>
    <string name="vice_description_lust">The Vice of Lust is the sin of uncontrolled desire. A lusty individual is driven by a passion for something (usually sex, but it can be a craving for virtually any experience or activity) that he acts upon without consideration for the needs or feelings of others. A lusty individual uses any means at his disposal to indulge his desires, from deception to manipulation to acts of violence.</string>
    <string name="vice_description_pride">Pride is the Vice of self-confidence run amok. It is the belief that one\'s every action is inherently right, even when it should be obvious that it is anything but. A prideful person refuses to back down when his decision or reputation is called into question, even when the evidence is clear that he is in the wrong. His ego does not accept any outcome that suggests fallibility, and he is willing to see others suffer rather than admit that he\'s wrong.</string>
    <string name="vice_description_sloth">The Vice of Sloth is about avoiding work until someone else has to step in to get the job done. Rather than put in the effort - and possibly risk failure - in a difficult situation, the slothful person simply refuses to do anything, knowing that someone else will step in and fix the problem sooner or later. The fact that people might needlessly suffer while the slothful person sits on his thumbs doesn\'t matter one bit.</string>
    <string name="vice_description_wrath">The Vice of Wrath is the sin of uncontrolled anger. The wrathful look for ways to vent their anger and frustration on people or objects at the slightest provocation. In most cases the reaction is far out of proportion to the perceived slight. A wrathful person cut off on the freeway might try to force another driver off the road, or a wrathful cop might delight in beating each and every person he arrests, regardless of the offense.</string>
    <string name="vice_regain_one_envy">Your character regains one Willpower point whenever she gains something important from a rival or has a hand in harming that rival\'s well-being.</string>
    <string name="vice_regain_one_gluttony">Your character regains one spent Willpower point whenever he indulges in his addiction or appetites at some risk to himself or a loved one.</string>
    <string name="vice_regain_one_greed">Your character regains one Willpower point whenever he acquires something at the expense of another. Gaining it must come at some potential risk (of assault, arrest or simple loss of peer respect).</string>
    <string name="vice_regain_one_lust">Your character is consumed by a passion for something. He regains one Willpower point whenever he satisfies his lust or compulsion in a way that victimizes others.</string>
    <string name="vice_regain_one_pride">Your character regains one Willpower point whenever he exerts his own wants (not needs) over others at some potential risk to himself. This is most commonly the desire for adulation, but it could be the desire to make others do as he commands.</string>
    <string name="vice_regain_one_sloth">Your character regains one Willpower point whenever he successfully avoids a difficult task but achieves the same goal nonetheless.</string>
    <string name="vice_regain_one_wrath">Your character regains one spent Willpower point whenever he unleashes his anger in a situation where doing so is dangerous. If the fight has already begun, no Willpower points are regained. It must take place in a situation where anger is unwarranted or inappropriate.</string>
    <string name="virtue_name_charity">Charity</string>
    <string name="virtue_name_faith">Faith</string>
    <string name="virtue_name_fortitude">Fortitude</string>
    <string name="virtue_name_hope">Hope</string>
    <string name="virtue_name_justice">Justice</string>
    <string name="virtue_name_prudence">Prudence</string>
</resources>