<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"

              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/txtMentalSkillsTitle"
        style="@style/style_text_card_title"
        android:text="@string/cat_mental"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginStart="@dimen/spacing_normal"
        android:background="@drawable/bkgd_cat_panel"
        android:paddingBottom="@dimen/spacing_half"
        android:paddingTop="@dimen/spacing_half">

        <view
            android:id="@+id/valueSetterAcademics"
            class="com.emi.nwodcombat.widgets.ValueSetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:traitCategory="@string/cat_mental"
            app:valueName="@string/skill_academics"
            />

        <view
            android:id="@+id/valueSetterComputer"
            class="com.emi.nwodcombat.widgets.ValueSetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/valueSetterAcademics"
            app:traitCategory="@string/cat_mental"
            app:valueName="@string/skill_computer"
            />

        <view
            android:id="@+id/valueSetterCrafts"
            class="com.emi.nwodcombat.widgets.ValueSetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/valueSetterComputer"
            app:traitCategory="@string/cat_mental"
            app:valueName="@string/skill_crafts"
            />

        <view
            android:id="@+id/valueSetterInvestigation"
            class="com.emi.nwodcombat.widgets.ValueSetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/valueSetterCrafts"
            app:traitCategory="@string/cat_mental"
            app:valueName="@string/skill_investigation"
            />

        <view
            android:id="@+id/valueSetterMedicine"
            class="com.emi.nwodcombat.widgets.ValueSetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/valueSetterInvestigation"
            app:traitCategory="@string/cat_mental"
            app:valueName="@string/skill_medicine"
            />

        <view
            android:id="@+id/valueSetterOccult"
            class="com.emi.nwodcombat.widgets.ValueSetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/valueSetterMedicine"
            app:traitCategory="@string/cat_mental"
            app:valueName="@string/skill_occult"
            />

        <view
            android:id="@+id/valueSetterPolitics"
            class="com.emi.nwodcombat.widgets.ValueSetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/valueSetterOccult"
            app:traitCategory="@string/cat_mental"
            app:valueName="@string/skill_politics"
            />

        <view
            android:id="@+id/valueSetterScience"
            class="com.emi.nwodcombat.widgets.ValueSetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/valueSetterPolitics"
            app:traitCategory="@string/cat_mental"
            app:valueName="@string/skill_science"
            />

    </RelativeLayout>
</LinearLayout>
