<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/spacing_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        app:cardCornerRadius="@dimen/spacing_half"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editName"
                android:layout_margin="@dimen/spacing_half"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_step_personal_info_name"/>

            <EditText
                android:id="@+id/editConcept"
                android:layout_margin="@dimen/spacing_half"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_step_personal_info_concept"/>

            <EditText
                android:id="@+id/editPlayer"
                android:layout_margin="@dimen/spacing_half"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_step_personal_info_player"
                android:text="@string/default_step_personal_info_player"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/spacing_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        app:cardCornerRadius="@dimen/spacing_half"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/label_step_personal_info_virtue"
                    android:layout_margin="@dimen/spacing_half"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_half"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_half"
                    android:text="@string/button_add"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/label_step_personal_info_vice"
                    android:layout_margin="@dimen/spacing_half"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_margin="@dimen/spacing_half"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_half"
                    android:text="@string/button_add"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>